--- a/EFC2.0/Pages/Index.cshtml
+++ b/EFC2.0/Pages/Index.cshtml
@@ -14,29 +14,34 @@
                                 <div class="carousel-indicators"><button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1" class="active"></button><button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button><button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button><button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button><button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button></div>
                                 <div class="carousel-inner align-items-center">
                                     <div class="carousel-item active">
-                                        <div class="text-center"><img src="~/images/organization.svg" alt="Organization"></div>
-                                        <p class="Carousel-title pt-2">Organization</p>
-                                        <p class="Carousel-description">Build a clear organization chart, manage reporting lines, and visualize your team.</p>
+                                        <div class="text-center">
+                                            <img src="~/images/organization.svg" alt="Organization"></div>
+                                            <p class="Carousel-title pt-2">Organization</p>
+                                            <p class="Carousel-description">Build a clear organization chart, manage reporting lines, and visualize your team.</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="text-center"><img src="../../../assets/images/login/performance.svg" alt="Performance"></div>
-                                        <p class="Carousel-title pt-2">Performance</p>
-                                        <p class="Carousel-description">Facilitate continuous improvement with a streamlined performance management system.</p>
+                                        <div class="text-center">
+                                            <img src="../../../assets/images/login/performance.svg" alt="Performance"></div>
+                                            <p class="Carousel-title pt-2">Performance</p>
+                                            <p class="Carousel-description">Facilitate continuous improvement with a streamlined performance management system.</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="text-center"><img src="../../../assets/images/login/payroll.svg" alt="Payroll"></div>
-                                        <p class="Carousel-title pt-2">Payroll</p>
-                                        <p class="Carousel-description">Ensure accurate and timely payments with a robust, integrated payroll system.</p>
+                                        <div class="text-center">
+                                            <img src="../../../assets/images/login/payroll.svg" alt="Payroll"></div>
+                                            <p class="Carousel-title pt-2">Payroll</p>
+                                            <p class="Carousel-description">Ensure accurate and timely payments with a robust, integrated payroll system.</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="text-center"><img src="../../../assets/images/login/attendance.svg" alt="Attendance"></div>
-                                        <p class="Carousel-title pt-2">Attendance</p>
-                                        <p class="Carousel-description">Gain insights into workforce productivity with easy-to-use attendance tracking.</p>
+                                        <div class="text-center">
+                                            <img src="../../../assets/images/login/attendance.svg" alt="Attendance"></div>
+                                            <p class="Carousel-title pt-2">Attendance</p>
+                                            <p class="Carousel-description">Gain insights into workforce productivity with easy-to-use attendance tracking.</p>
                                     </div>
                                     <div class="carousel-item">
-                                        <div class="text-center"><img src="../../../assets/images/login/selfService.svg" alt="Employee Services"></div>
-                                        <p class="Carousel-title pt-2">Employee Services</p>
-                                        <p class="Carousel-description">Put control at their fingertips for easy access to requests and data.</p>
+                                        <div class="text-center">
+                                            <img src="../../../assets/images/login/selfService.svg" alt="Employee Services"></div>
+                                            <p class="Carousel-title pt-2">Employee Services</p>
+                                            <p class="Carousel-description">Put control at their fingertips for easy access to requests and data.</p>
                                     </div>
                                 </div>
                             </div>
@@ -45,7 +50,8 @@
                             <div _ngcontent-yct-c266="">
                                 <form novalidate="" class="ng-dirty ng-touched ng-valid">
 
-                                    <div class="text-center"><img src="~/images/efc_o_new.png" style="height: 60px;width: 192px; alt="EFCHR" class="logo"></div>
+                                    <div class="text-center">
+                                    <img src="~/images/efc_o_new.png" style="height: 60px;width: 192px;" alt="EFCHR" class="logo"></div>
                                     <div class="text-center rd-mt-2">
                                         <p class="rd-text-primary login">EFC Login</p>
                                     </div>
@@ -139,7 +145,7 @@
                             <div>
                                 <form  novalidate="" class="ng-untouched ng-pristine ng-invalid">
                                     <div  class="text-center">
-                                        <img src="~/images/efc_o_new.png" alt="RapidHR" class="logo">
+                                        <img src="~/images/efc_o_new.png" alt="EFCHR" class="logo">
                                     </div>
                                     <div  class="text-center rd-mt-2">
                                         <p  class="rd-text-primary login">Sign In - OTP</p>
@@ -193,7 +199,8 @@
                         <div id="forgot-pass-form" class="col-md-6 login-form ng-star-inserted">
                             <div>
                                 <form novalidate="" class="ng-pristine ng-invalid ng-touched">
-                                    <div class="text-center"><img src="../../../assets/images/RapidHr-newLogo.png" alt="RapidHR" class="logo"></div>
+                                    <div class="text-center">
+                                    <img src="~/images/efc_o_new.png" alt="EFCHR" class="logo"></div>
                                     <div class="text-center rd-mt-2">
                                         <p class="rd-text-primary login">Reset Password</p>
                                     </div>
