--- a/EFC2.0/wwwroot/css/style.css
+++ b/EFC2.0/wwwroot/css/style.css
@@ -34141,7 +34141,7 @@ em, i {
     margin: 0;
     text-align: center;
     border-radius: 4px;
-    background-color: #273143;
+    background-color: #ff823e;
     font-size: 12px;
     color: #fff;
     font-weight: 500;
