--- a/EFC2.0/Pages/Shared/_Layout.cshtml
+++ b/EFC2.0/Pages/Shared/_Layout.cshtml
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - EFC_2.0 (EMP Facility Center)</title>
     <link rel="shortcut icon" href="https://efc.databridgemarketresearch.com/emp/efc-logo.png" style="height:50px;" />
-    <title>@ViewData["Title"] - EFC2._0</title>
     <link href="~/css/style.css" rel="stylesheet" media="all" onload="this.media='all'" />
+    <link href="~/css/headerfooter.css" rel="stylesheet" media="all" onload="this.media='all'" />
     <style type="text/css">
         @@font-face {
             font-family: 'Material Icons';
@@ -4007,40 +4008,19 @@
         }</style>
 </head>
 <body>
-   @*  <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">EFC2._0</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header> *@
     <div>
         <main role="main" class="pb-3">
+            @if (ViewData["HideHeader"] == null || (bool)ViewData["HideHeader"] == false)
+            {
+                <partial name="Header" />
+            }
+            @if (ViewData["HideSidebar"] == null || (bool)ViewData["HideSidebar"] == false)
+            {
+                <partial name="Sidebar" />
+            }
             @RenderBody()
         </main>
     </div>
-
-   @*  <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - EFC2._0 - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer> *@
-
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
