--- a/EFC2.0/Pages/Dashboard.cshtml
+++ b/EFC2.0/Pages/Dashboard.cshtml
@@ -158,27 +158,50 @@
                                         <div class="rd-home-headings1">Events</div>
                                         <div class="apply-button">View All</div>
                                     </div>
-                                    <mat-tab-group class="mat-tab-group tab-border tab-home mat-primary" style="max-height: 250px; overflow-y: auto;">
+                                    <mat-tab-group class="mat-tab-group tab-border tab-home mat-primary">
+                                        <mat-tab-header class="mat-tab-header">
+                                            <div class="mat-tab-label-container">
+                                                <div role="tablist" class="mat-tab-list">
+                                                    <div class="mat-tab-labels">
+                                                        <div role="tab" class="mat-tab-label mat-tab-label-active">
+                                                            <div class="mat-tab-label-content">Birthday</div>
+                                                        </div>
+                                                        <div role="tab" class="mat-tab-label">
+                                                            <div class="mat-tab-label-content">Work Anniversary</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </mat-tab-header>
+                                        <div class="mat-tab-body-wrapper">
+                                            <mat-tab-body class="mat-tab-body mat-tab-body-active">
+                                                <div class="mat-tab-body-content">Birthday Content</div>
+                                            </mat-tab-body>
+                                            <mat-tab-body class="mat-tab-body">
+                                                <div class="mat-tab-body-content">Work Anniversary Content</div>
+                                            </mat-tab-body>
+                                        </div>
+                                    </mat-tab-group>
+
+
+@*                                     <mat-tab-group class="mat-tab-group tab-border tab-home mat-primary" style="max-height: 250px; overflow-y: auto;">
                                         <mat-tab-header class="mat-tab-header">
                                             <button aria-hidden="true" type="button" mat-ripple="" tabindex="-1" class="mat-ripple mat-tab-header-pagination mat-tab-header-pagination-before mat-elevation-z4 mat-tab-header-pagination-disabled" disabled="">
                                                 <div class="mat-tab-header-pagination-chevron"></div>
                                             </button>
                                             <div class="mat-tab-label-container">
-                                                <div role="tablist" class="mat-tab-list" style="transform: translateX(0px);">
+                                                <div role="tablist" class="mat-tab-list">
                                                     <div class="mat-tab-labels">
-                                                        <div role="tab" mattablabelwrapper="" mat-ripple="" cdkmonitorelementfocus="" class="mat-ripple mat-tab-label mat-focus-indicator mat-tab-label-active ng-star-inserted" id="mat-tab-label-0-0" tabindex="0" aria-posinset="1" aria-setsize="2" aria-controls="mat-tab-content-0-0" aria-selected="true" aria-disabled="false">
+                                                        <div role="tab" class="mat-ripple mat-tab-label mat-focus-indicator mat-tab-label-active ng-star-inserted" id="mat-tab-label-0-0" tabindex="0" aria-posinset="1" aria-setsize="2" aria-controls="mat-tab-content-0-0" aria-selected="true" aria-disabled="false">
                                                             <div class="mat-tab-label-content">Birthday</div>
                                                         </div>
-                                                        <div role="tab" mattablabelwrapper="" mat-ripple="" cdkmonitorelementfocus="" class="mat-ripple mat-tab-label mat-focus-indicator ng-star-inserted" id="mat-tab-label-0-1" tabindex="-1" aria-posinset="2" aria-setsize="2" aria-controls="mat-tab-content-0-1" aria-selected="false" aria-disabled="false">
+                                                        <div role="tab" class="mat-ripple mat-tab-label mat-focus-indicator ng-star-inserted" id="mat-tab-label-0-1" tabindex="-1" aria-posinset="2" aria-setsize="2" aria-controls="mat-tab-content-0-1" aria-selected="false" aria-disabled="false">
                                                             <div class="mat-tab-label-content">Work Anniversary</div>
                                                         </div>
                                                     </div>
                                                     <mat-ink-bar class="mat-ink-bar" style="visibility: visible; left: 0px; width: 160px;"></mat-ink-bar>
                                                 </div>
                                             </div>
-                                            <button aria-hidden="true" type="button" mat-ripple="" tabindex="-1" class="mat-ripple mat-tab-header-pagination mat-tab-header-pagination-after mat-elevation-z4 mat-tab-header-pagination-disabled" disabled="">
-                                                <div class="mat-tab-header-pagination-chevron"></div>
-                                            </button>
                                         </mat-tab-header>
                                         <div class="mat-tab-body-wrapper">
                                             <mat-tab-body role="tabpanel" class="mat-tab-body ng-tns-c182-13 mat-tab-body-active ng-star-inserted" id="mat-tab-content-0-0" aria-labelledby="mat-tab-label-0-0">
@@ -187,11 +210,26 @@
                                                 </div>
                                             </mat-tab-body>
                                             <mat-tab-body role="tabpanel" class="mat-tab-body ng-tns-c182-14 ng-star-inserted" id="mat-tab-content-0-1" aria-labelledby="mat-tab-label-0-1">
-                                                <div cdkscrollable="" class="mat-tab-body-content ng-tns-c182-14 ng-trigger ng-trigger-translateTab" style="transform: translate3d(100%, 0px, 0px); min-height: 1px;"></div>
+                                                <div cdkscrollable="" class="mat-tab-body-content ng-tns-c182-14 ng-trigger ng-trigger-translateTab" style="transform: translate3d(100%, 0px, 0px); min-height: 1px;">
+                                                    <div class="row ng-star-inserted" style="">
+                                                        <div class="col-md-3 rd-mt-2 text-center ng-star-inserted">
+                                                            <div class="bday-border">
+                                                                <div>
+                                                                    <img src="~/images/emptyProfile.jpg" alt="" class="event-img ng-star-inserted">
+                                                                </div>
+                                                                <div class="event-user"> HR DBMR </div>
+                                                                <p class="event-day"> Apr 25,Fri </p>
+                                                                <div class="rd-table-tags-success rd-mb-1 rd-me-1"><span class="rd-table-tag-dot rd-alert-text-success"></span> 2 Years </div>
+                                                                <div><button type="button" class="rd-btn-outline-secondary-2-sm apply-button-out" disabled=""> Send Wish </button></div>
+                                                            </div>
+                                                        </div>
+                                                        
+                                                    </div>
+                                                </div>
                                             </mat-tab-body>
                                         </div>
                                     </mat-tab-group>
-                                </div>
+ *@                                </div>
                             </div>
                         </div>
                         <div class="row rd-mt-2">
@@ -251,15 +289,28 @@
                     </div>
                 </div>
             </div>
-            <div class="button-container ng-star-inserted">
-                <button class="icon-button bounce">
-                   <img src="../../../../assets/images/feedback-req.svg" alt="Feedback Icon" class="icon">
-                   <span class="feedback-text">Feedback</span>
-                 </button>
-           </div>
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $(".mat-tab-label").click(function () {
+            // Remove active class from all tabs and bodies
+            $(".mat-tab-label").removeClass("mat-tab-label-active");
+            $(".mat-tab-body").removeClass("mat-tab-body-active");
+
+            // Add active class to clicked tab
+            $(this).addClass("mat-tab-label-active");
+
+            // Get the tab index
+            let tabIndex = $(this).index();
+
+            // Show the corresponding tab content
+            $(".mat-tab-body").eq(tabIndex).addClass("mat-tab-body-active");
+        });
+    });
+</script>
 
  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
