--- a/EFC2.0/wwwroot/css/dashboard.css
+++ b/EFC2.0/wwwroot/css/dashboard.css
@@ -853,7 +853,12 @@ a.link-primary {
 .cdk-high-contrast-active .mat-tab-label {
     opacity: 1
 }
-
+.mat-tab-body {
+    display:none;
+}
+.mat-tab-body .mat-tab-body-active {
+    display: block;
+}
 @media(max-width: 599px) {
     .mat-tab-label {
         min-width: 72px
