--- a/EFC2.0/Pages/Shared/Header.cshtml
+++ b/EFC2.0/Pages/Shared/Header.cshtml
@@ -17,7 +17,7 @@
                 <img ptooltip="Notification" tooltipposition="bottom" src="../../../assets/images/mat-svg/Bell-new.svg" alt="" class="p-element top-nav-icon">
             </div> *@
             
-            <div aria-haspopup="true" class="mat-menu-trigger profile-data">
+            <div onclick="menuContent()" class="mat-menu-trigger profile-data">
                 <div class="d-flex align-items-center">
                     <div>
                         <img src="~/images/emptyProfile.jpg" alt="Profile" class="rounded-circle rd-profile-image ng-star-inserted">
