--- a/EFC2.0/Pages/Shared/Header.cshtml
+++ b/EFC2.0/Pages/Shared/Header.cshtml
@@ -17,7 +17,7 @@
                 <img ptooltip="Notification" tooltipposition="bottom" src="../../../assets/images/mat-svg/Bell-new.svg" alt="" class="p-element top-nav-icon">
             </div> *@
             
-            <div onclick="menuContent()" class="mat-menu-trigger profile-data">
+            <div class="mat-menu-trigger profile-data">
                 <div class="d-flex align-items-center">
                     <div>
                         <img src="~/images/emptyProfile.jpg" alt="Profile" class="rounded-circle rd-profile-image ng-star-inserted">
@@ -29,6 +29,21 @@
                         <p class="userName">Admin</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="dropdownMenu" class="cdk-overlay-pane" style="position: absolute; display: none;">
+        <div tabindex="-1" role="menu" class="mat-menu-panel ng-trigger ng-trigger-transformMenu ng-tns-c133-9 mat-menu-after mat-menu-below mat-elevation-z4 ng-star-inserted" id="mat-menu-panel-4">
+            <div class="mat-menu-content ng-tns-c133-9">
+                <button mat-menu-item="" routerlink="home/profile" class="mat-focus-indicator menu-butt mat-menu-item" tabindex="0">
+                    <mat-icon role="img" class="mat-icon notranslate me-0 material-icons mat-icon-no-color" aria-hidden="true">person</mat-icon>
+                    My Profile
+                </button>
+                <button id="logoutButton" class="mat-focus-indicator menu-butt mat-menu-item">
+                    <mat-icon role="img" class="mat-icon notranslate me-0 material-icons mat-icon-no-color" aria-hidden="true">logout</mat-icon>
+                    Log Out
+                </button>
             </div>
         </div>
     </div>
