--- a/EFC2.0/wwwroot/css/style.css
+++ b/EFC2.0/wwwroot/css/style.css
@@ -30009,24 +30009,27 @@ input.mat-input-element {
     position: absolute;
     pointer-events: auto;
     box-sizing: border-box;
-    z-index: 1000;
+    z-index: 1050;
     display: flex;
     max-width: 100%;
-    max-height: 100%
+    min-height: 100%;
+    right: 15px;
+    top: 60px;
 }
-
 .cdk-overlay-backdrop {
     position: absolute;
     inset: 0;
-    z-index: 1000;
+    z-index: 999;
     pointer-events: auto;
     -webkit-tap-highlight-color: transparent;
     transition: opacity .4s cubic-bezier(.25,.8,.25,1);
-    opacity: 0
+    opacity: 0;
+    display:none;
 }
 
     .cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
-        opacity: 1
+        opacity: 1;
+        display:block;
     }
 
 .cdk-high-contrast-active .cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
