--- a/EFC2.0/Pages/Index.cshtml
+++ b/EFC2.0/Pages/Index.cshtml
@@ -60,29 +60,29 @@
                                         <mat-form-field class="mat-form-field example-full-width my-1 ng-tns-c111-5 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-legacy mat-form-field-can-float mat-form-field-should-float mat-form-field-has-label ng-star-inserted mat-form-field-autofilled ng-dirty ng-valid ng-touched">
                                             <div class="mat-form-field-wrapper ng-tns-c111-5">
                                                 <div class="mat-form-field-flex ng-tns-c111-5">
-                                                    
+
                                                     <div class="mat-form-field-infix ng-tns-c111-5">
                                                         <input autocomplete="off" name="email" type="text" placeholder="Enter your Employee Id" required="" class="mat-input-element mat-form-field-autofill-control ng-tns-c111-5 cdk-text-field-autofill-monitored cdk-text-field-autofilled valid ng-dirty ng-valid ng-touched" id="mat-input-2" data-placeholder="Enter your Employee Id" aria-required="true" aria-invalid="false">
                                                         <span class="mat-form-field-label-wrapper ng-tns-c111-5">
                                                             <label class="mat-form-field-label ng-tns-c111-5 ng-star-inserted" id="mat-form-field-label-5" for="mat-input-2" aria-owns="mat-input-2">
-                                                                
+
                                                                 <mat-label class="ng-tns-c111-5 ng-star-inserted">Employee Id</mat-label>
                                                                 <span aria-hidden="true" class="mat-placeholder-required mat-form-field-required-marker ng-tns-c111-5 ng-star-inserted"> *</span>
                                                             </label>
-                                                            
+
                                                         </span>
                                                     </div>
-                                                    
+
                                                 </div>
                                                 <div class="mat-form-field-underline ng-tns-c111-5 ng-star-inserted"><span class="mat-form-field-ripple ng-tns-c111-5"></span></div>
-                                                
+
                                                 <div class="mat-form-field-subscript-wrapper ng-tns-c111-5">
-                                                    
+
                                                     <div class="mat-form-field-hint-wrapper ng-tns-c111-5 ng-trigger ng-trigger-transitionMessages ng-star-inserted" style="opacity: 1; transform: translateY(0%);">
-                                                        
+
                                                         <div class="mat-form-field-hint-spacer ng-tns-c111-5"></div>
                                                     </div>
-                                                    
+
                                                 </div>
                                             </div>
                                         </mat-form-field>
@@ -91,49 +91,51 @@
                                         <mat-form-field class="mat-form-field example-full-width ng-tns-c111-6 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-legacy mat-form-field-can-float mat-form-field-should-float mat-form-field-has-label ng-star-inserted mat-form-field-autofilled ng-dirty ng-valid ng-touched">
                                             <div class="mat-form-field-wrapper ng-tns-c111-6">
                                                 <div class="mat-form-field-flex ng-tns-c111-6">
-                                                    
+
                                                     <div class="mat-form-field-infix ng-tns-c111-6">
                                                         <input matinput="" autocomplete="off" placeholder="Enter your password" formcontrolname="password" ptooltip="Your password must be at least 8 characters long, contain at least one number and have a mixture of uppercase, lowercase, special characters." required="" class="mat-input-element mat-form-field-autofill-control p-element ng-tns-c111-6 cdk-text-field-autofill-monitored cdk-text-field-autofilled valid ng-dirty ng-valid ng-touched" type="password" id="mat-input-3" data-placeholder="Enter your password" aria-required="true" aria-invalid="false">
                                                         <span class="mat-form-field-label-wrapper ng-tns-c111-6">
                                                             <label class="mat-form-field-label ng-tns-c111-6 ng-star-inserted" id="mat-form-field-label-7" for="mat-input-3" aria-owns="mat-input-3">
-                                                                
+
                                                                 <mat-label class="ng-tns-c111-6 ng-star-inserted">Password</mat-label>
                                                                 <span aria-hidden="true" class="mat-placeholder-required mat-form-field-required-marker ng-tns-c111-6 ng-star-inserted"> *</span>
                                                             </label>
-                                                            
+
                                                         </span>
                                                     </div>
                                                     <div class="mat-form-field-suffix ng-tns-c111-6 ng-star-inserted">
-                                                        
+
                                                         <mat-icon id="visiblepass" role="img" matsuffix="" class="mat-icon notranslate cursor-pointer eye-icon material-icons mat-icon-no-color ng-tns-c111-6 ng-star-inserted" aria-hidden="true" data-mat-icon-type="font">visibility_off</mat-icon>
-                                                      
+
                                                         <mat-icon id="invisiblepass" role="img" matsuffix="" class="mat-icon notranslate cursor-pointer eye-icon material-icons mat-icon-no-color ng-tns-c111-6 ng-star-inserted" aria-hidden="true" data-mat-icon-type="font">visibility_on</mat-icon>
-                                                     
+
                                                     </div>
-                                                    
+
                                                 </div>
                                                 <div class="mat-form-field-underline ng-tns-c111-6 ng-star-inserted"><span class="mat-form-field-ripple ng-tns-c111-6"></span></div>
-                                                
+
                                                 <div class="mat-form-field-subscript-wrapper ng-tns-c111-6">
-                                                    
+
                                                     <div class="mat-form-field-hint-wrapper ng-tns-c111-6 ng-trigger ng-trigger-transitionMessages ng-star-inserted" style="opacity: 1; transform: translateY(0%);">
-                                                        
+
                                                         <div class="mat-form-field-hint-spacer ng-tns-c111-6"></div>
                                                     </div>
-                                                    
+
                                                 </div>
                                             </div>
                                         </mat-form-field>
                                     </div>
                                     <div class="text-end rd-mb-2"><a onclick="forgotPassword()" class="bottom-text">Forgot Password?</a></div>
-                                    <button type="submit" class="rd-btn-primary w-100">Login</button>
+
+                                    <button id="loginButton" type="button" class="rd-btn-primary w-100">Login</button>
+
                                     <div class="separator my-4"><span class="sep-inner">Login with</span></div>
                                     <div class="oauthdiv">
                                         <div class="oauth-btn">
                                             <button onclick="otpbtn()" type="button" class="mat-focus-indicator text-center mat-menu-item" tabindex="0" role="menuitem" aria-disabled="false">
                                                 <img src="~/images/lock-otp.svg" alt="" style="width: 32px;"> OTP
                                                 <div matripple="" class="mat-ripple mat-menu-ripple"></div>
-                                                
+
                                             </button>
                                         </div>
                                     </div>
@@ -156,12 +158,12 @@
                                             <mat-form-field  class="mat-form-field example-full-width ng-tns-c111-7 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-legacy mat-form-field-can-float mat-form-field-should-float mat-form-field-has-label ng-untouched ng-pristine ng-invalid ng-star-inserted">
                                                 <div class="mat-form-field-wrapper ng-tns-c111-7">
                                                     <div class="mat-form-field-flex ng-tns-c111-7">
-                                                        
+
                                                         <div class="mat-form-field-infix ng-tns-c111-7">
                                                             <input  matinput="" autocomplete="off" placeholder="Enter your email" formcontrolname="email" required="" class="mat-input-element mat-form-field-autofill-control ng-tns-c111-7 ng-untouched ng-pristine ng-invalid cdk-text-field-autofill-monitored" id="mat-input-4" data-placeholder="Enter your email" aria-required="true">
                                                             <span class="mat-form-field-label-wrapper ng-tns-c111-7">
                                                                 <label class="mat-form-field-label ng-tns-c111-7 ng-star-inserted" id="mat-form-field-label-9" for="mat-input-4" aria-owns="mat-input-4">
-                                                                    
+
                                                                     <mat-label  class="ng-tns-c111-7 ng-star-inserted">Email Address</mat-label>
 
                                                                     <span aria-hidden="true" class="mat-placeholder-required mat-form-field-required-marker ng-tns-c111-7 ng-star-inserted"> *</span>
@@ -176,10 +178,10 @@
                                                         <span class="mat-form-field-ripple ng-tns-c111-7"></span>
                                                     </div>
                                                     <div class="mat-form-field-subscript-wrapper ng-tns-c111-7">
-                                                        
+
 
                                                         <div class="mat-form-field-hint-wrapper ng-tns-c111-7 ng-trigger ng-trigger-transitionMessages ng-star-inserted" style="opacity: 1; transform: translateY(0%);">
-                                                            
+
 
                                                             <div class="mat-form-field-hint-spacer ng-tns-c111-7"></div>
                                                         </div>
@@ -205,34 +207,34 @@
                                         <p class="rd-text-primary login">Reset Password</p>
                                     </div>
                                     <p class="login-description fw-light rd-mt-1 text-center">Please enter your registered email address </p>
-                                    
+
                                     <div class="icon_wrap icon_wrap_in mt-4 mb-3 mt-md-4 mb-md-3">
                                         <mat-form-field class="mat-form-field example-full-width my-1 ng-tns-c111-17 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-legacy mat-form-field-can-float mat-form-field-should-float mat-form-field-has-label ng-pristine ng-invalid ng-star-inserted mat-form-field-invalid ng-touched">
                                             <div class="mat-form-field-wrapper ng-tns-c111-17">
                                                 <div class="mat-form-field-flex ng-tns-c111-17">
-                                                    
+
                                                     <div class="mat-form-field-infix ng-tns-c111-17">
                                                         <input matinput="" autocomplete="off" name="email" type="text" placeholder="Enter your email" formcontrolname="email" required="" class="mat-input-element mat-form-field-autofill-control ng-tns-c111-17 ng-pristine ng-invalid cdk-text-field-autofill-monitored invalid ng-touched" id="mat-input-14" data-placeholder="Enter your email" aria-required="true">
                                                         <span class="mat-form-field-label-wrapper ng-tns-c111-17">
                                                             <label class="mat-form-field-label ng-tns-c111-17 ng-star-inserted" id="mat-form-field-label-29" for="mat-input-14" aria-owns="mat-input-14">
-                                                                
+
                                                                 <mat-label class="ng-tns-c111-17 ng-star-inserted">Email Address</mat-label>
                                                                 <span aria-hidden="true" class="mat-placeholder-required mat-form-field-required-marker ng-tns-c111-17 ng-star-inserted"> *</span>
                                                             </label>
-                                                            
+
                                                         </span>
                                                     </div>
-                                                    
+
                                                 </div>
                                                 <div class="mat-form-field-underline ng-tns-c111-17 ng-star-inserted"><span class="mat-form-field-ripple ng-tns-c111-17"></span></div>
-                                                
+
                                                 <div class="mat-form-field-subscript-wrapper ng-tns-c111-17">
-                                                    
+
                                                     <div class="mat-form-field-hint-wrapper ng-tns-c111-17 ng-trigger ng-trigger-transitionMessages ng-star-inserted" style="opacity: 1; transform: translateY(0%);">
-                                                        
+
                                                         <div class="mat-form-field-hint-spacer ng-tns-c111-17"></div>
                                                     </div>
-                                                    
+
                                                 </div>
                                             </div>
                                         </mat-form-field>
@@ -248,3 +250,12 @@
         </div>
     </div>
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+ <script>
+    $("#loginButton").click(function () {
+        window.location.href = "dashboard";
+    });
+</script>
