--- a/EFC2.0/Pages/Dashboard.cshtml
+++ b/EFC2.0/Pages/Dashboard.cshtml
@@ -21,7 +21,7 @@
                                         <div class="flex-head"> Shift Timing - (09:30 - 17:30) </div>
                                     </div>
                                     <hr>
-                                    <div class="d-flex flex-row" style="gap: 2.5rem;">
+                                    <div class="d-flex flex-row" style="gap: 1.5rem;">
                                         <div class="sub-flex">
                                             <div class="flex-head"> Check In </div>
                                             <div class="flex-head1"> --:-- </div>
@@ -31,6 +31,11 @@
                                             <div class="flex-head"> Check out </div>
                                             <div class="flex-head1"> --:-- </div>
                                         </div>
+                                         <div class="separtor"></div>
+                                        <div class="sub-flex">
+                                            <div class="flex-head"> Break Hours </div>
+                                            <div class="flex-head1"> 00h : 00m  </div>
+                                        </div>
                                         <div class="separtor"></div>
                                         <div class="sub-flex">
                                             <div class="flex-head"> Total Hours </div>
@@ -39,48 +44,7 @@
                                     </div>
                                 </div>
                                 <button type="button" class="rd-btn-primary-sm home-login-btn rd-mt-2 ng-star-inserted"> Check In </button>
-                                <div class="feeling-text rd-mb-2"> How Are You Feeling Today? </div>
-                                <div class="emoji-wrapper">
-                                    <button type="button" class="arrow button-null" disabled=""><img src="../../../assets/images/Icons set.svg" alt=""></button>
-                                    <div class="emoji-bg ng-star-inserted">
-                                        <div class="d-flex"></div>
-                                        <div class="text-center">
-                                            <div class="em-days"> Mon </div>
-                                            <div class="em-date"> 31 </div>
-                                        </div>
-                                    </div>
-                                    <div class="emoji-bg ng-star-inserted">
-                                        <div class="d-flex"></div>
-                                        <div class="text-center">
-                                            <div class="em-days"> Tue </div>
-                                            <div class="em-date"> 01 </div>
-                                        </div>
-                                    </div>
-                                    <div class="emoji-bg ng-star-inserted">
-                                        <div class="emoji-holder ng-star-inserted">
-                                            <div class="svg-em ng-star-inserted"><img alt="" src="../../../assets/images/Emoji.svg"></div>
-                                            <div class="svg-em ng-star-inserted"><img alt="" src="../../../assets/images/Emoji (1).svg"></div>
-                                            <div class="svg-em ng-star-inserted"><img alt="" src="../../../assets/images/Emoji (2).svg"></div>
-                                            <div class="svg-em ng-star-inserted"><img alt="" src="../../../assets/images/Emoji (3).svg"></div>
-                                            <div class="svg-em ng-star-inserted"><img alt="" src="../../../assets/images/Emoji (4).svg"></div>
-                                        </div>
-                                        <div class="d-flex">
-                                            <mat-icon role="img" class="mat-icon notranslate material-icons mat-icon-no-color ng-star-inserted" aria-hidden="true" data-mat-icon-type="font">add</mat-icon>
-                                        </div>
-                                        <div class="text-center">
-                                            <div class="em-days"> Wed </div>
-                                            <div class="em-date"> 02 </div>
-                                        </div>
-                                    </div>
-                                    <div class="emoji-bg ng-star-inserted">
-                                        <div class="d-flex"></div>
-                                        <div class="text-center">
-                                            <div class="em-days"> Thu </div>
-                                            <div class="em-date"> 03 </div>
-                                        </div>
-                                    </div>
-                                    <button type="button" class="arrow button-null"><img src="../../../assets/images/Icons set (1).svg" alt=""></button>
-                                </div>
+                             
                             </div>
                         </div>
                     </div>
