--- a/EFC2.0/Pages/Shared/Header.cshtml
+++ b/EFC2.0/Pages/Shared/Header.cshtml
@@ -2,7 +2,7 @@
     <div class="top-nav-left">
         <a routerlink="" class="logo" href="#/">
             <span class="logo">
-                <img src="~/images/EFC_O_new.png" alt="" class="p-1 my-logo rd-ms-1 rd-me-1 ng-star-inserted">
+                <img src="~/images/efclogo.png" alt="" class="p-1 my-logo rd-ms-1 rd-me-1 ng-star-inserted">
             </span>
         </a>
     </div>
