--- a/EFC2.0/Pages/Shared/Sidebar.cshtml
+++ b/EFC2.0/Pages/Shared/Sidebar.cshtml
@@ -4,7 +4,10 @@
             <ul class="navbar-nav">
                 <li routerlinkactive="menu-1-active" routerlink="home" class="nav-item menu-1-active" tabindex="0">
                     <a>
-                        <img src="~/images/Home-new.svg" alt="" class="img-new-size">
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.5 16.5449H11.5C10.67 16.5449 10 17.2149 10 18.0449V21.5449H15V18.0449C15 17.2149 14.33 16.5449 13.5 16.5449Z" stroke="#325080" stroke-width="1.5" stroke-miterlimit="10" stroke-linejoin="round" />
+                            <path d="M10.5732 2.86477L3.64319 8.41477C2.86319 9.03477 2.36319 10.3448 2.53319 11.3248L3.86319 19.2848C4.10319 20.7048 5.46319 21.8548 6.90319 21.8548H18.1032C19.5332 21.8548 20.9032 20.6948 21.1432 19.2848L22.4732 11.3248C22.6332 10.3448 22.1332 9.03477 21.3632 8.41477L14.4332 2.87477C13.3632 2.01477 11.6332 2.01477 10.5732 2.86477Z" stroke="#325080" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
                         <p>Home</p>
                     </a>
                 </li>
